--- a/grad/.vscode/settings.json
+++ b/grad/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "jupyter.jupyterServerType": "local"
+    "jupyter.jupyterServerType": "local",
+    "editor.tabCompletion": "on",
+    "diffEditor.codeLens": true
 }
